HTML structure and general SCC styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <title>Juego Piedra, Papel y Tijera</title>
 </head>
 <body>
+    <main class="js_boxgame">
+        <h1>Juego Piedra, Papel y Tijera</h1>
+        <h2>Introduce aquí tu jugada:</h2>
 
+        <form class="form__reviewExercise">
+        <select class="js__gameSelect">
+            <option value="placeholder">Seleccione su jugada</option>
+            <option value="piedra">Piedra</option>
+            <option value="papel">Papel</option>
+            <option value="tijera">Tijera</option>
+        </select>
+        <button>Jugar</button>
+        </form>
+        <br>
+        <input type="text" value="Vamos a Jugar!">
+        <h3 class="player score">Jugador: 0</h3>
+        <h3 class="score machine">Computadora: 0</h3>
+    </main> 
     <script src="./main.js"></script>
 </body>
 </html>
