Getting started on the Java file

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <option value="papel">Papel</option>
             <option value="tijera">Tijera</option>
         </select>
-        <button>Jugar</button>
+        <button class="js_startGameBtn">Jugar</button>
         </form>
         <br>
         <input type="text" value="Vamos a Jugar!">
-        <h3 class="player score">Jugador: 0</h3>
-        <h3 class="score machine">Computadora: 0</h3>
+        <h3 class="js_player score">Jugador: 0</h3>
+        <h3 class="score js_machine">Computadora: 0</h3>
     </main> 
     <script src="./main.js"></script>
 </body>
