Update function finalScore

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="js_startGameBtn">Jugar</button>
         </form>
         <br>
-        <input type="text" value="Vamos a Jugar!">
+        <label class="js_markerBtn">Vamos a Jugar!</label>
         <h3 class="js_player score">Jugador: 0</h3>
         <h3 class="score js_machine">Computadora: 0</h3>
     </main> 
